[project]
name = "tester"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "geopandas>=1.0.1",
    "idna==3.10",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "uv==0.8.15",
]
